# VideoScribe

./: .env.example  Readme.md  docker-compose.yml
BackEnd/: .dockerignore  Dockerfile  main.py  pyproject.toml
BackEnd/app/: main.py
BackEnd/app/model/: user_connection.py
BackEnd/app/schema/: user_schema.py
FrontEnd/: Dockerfile  index.html  package-lock.json  package.json
FrontEnd/src/: App.jsx  main.jsx
FrontEnd/src/components/: Body.jsx  CategorieSpace.jsx  CategoriesList.jsx  CategoriesPredict.jsx  Header.jsx  HeaderTools.jsx  Loading.jsx  LoadingVideos.jsx  Login.jsx  Loginbutton.jsx  Logo.jsx  Logo2.jsx  MyVideos.jsx  MyvideosList.jsx  NewVideo.jsx  Search.jsx  SessionButtons.jsx  SignUp.jsx  UserTools.jsx  VideoCover.jsx  VideoCoverList.jsx  VideoModal.jsx  VideoPredict.jsx
FrontEnd/src/context/: AppContext.jsx
FrontEnd/src/schemas/: AllVideos.schemas.js  CategoriePredict.schema.js  Categories.schemas.js  userVideos.schemas.js
FrontEnd/src/scripts/: organize.js  petition.js
inferenceServer/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
inferenceServer/app/: main.py
inferenceServer/app/model/: model.py
inferenceServer/app/utils/: utils.py
