[tool.poetry]
name = "inferenceserver"
version = "0.1.0"
description = "Inference Server for video classification"
authors = ["Julian Vega <ja.vega.g10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.94.1"
uvicorn = "^0.21.0"
transformers = "^4.27.1"
pytube = "^12.1.2"
numpy = ">=1.22,<1.24"
decord = "^0.6.0"
imageio = "^2.26.0"
python-multipart = "^0.0.6"
torch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
